Fix navbar cart count update & overflow issue, update styles and homepage

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,8 +1,10 @@
 #footer {
     background-color: var(--dark);
     text-align: center;
-    padding: 50px 0 10px;
+    padding-top: 50px;
     width: 100%;
+    height: 350px;
+    margin-top: 100px;
   }
 
   .footer-copyright {
@@ -16,6 +18,7 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-bottom: 1rem;
   }
   
   .footer-logo span{
@@ -56,4 +59,8 @@
   
   .social-buttons a:hover {
     transform: scale(1.2);
+  }
+
+  .contact-container{
+    margin-bottom: 0;
   }
